WIP(wheel) - Almost done, add search button

--- a/mixologylab/src/Dev-Playground/wheel.html
+++ b/mixologylab/src/Dev-Playground/wheel.html
@@ -37,7 +37,7 @@
             height: 20px;
         }
         .text1{
-            color:white
+            color:black
         }
 
         .drinknamecontainer{
@@ -217,7 +217,6 @@
 </div>
 
 
-<input class="text" id="angle" type="number" placeholder="0" value="0" onchange="inputUpdate(this.value)"/>
 <div class="text1" id="test">fdfdfdfds</div>
 <div class="text1" >x-coordinates: <span id="xco"></span></div>
 <div class="text1" >y-coordinates: <span id="yco"></span></div>
