feat(drinkDetail) - Add logic and css

--- a/mixologylab/src/Dev-Playground/wheel.html
+++ b/mixologylab/src/Dev-Playground/wheel.html
@@ -33,7 +33,7 @@
             height: 20px;
         }
         .text1{
-            color:black
+            color:white;
         }
 
         .drinknamecontainer{
