--- a/mixologylab/public/index.html
+++ b/mixologylab/public/index.html
@@ -12,6 +12,12 @@
     <link href="https://fonts.googleapis.com/css?family=Courgette|Playball|Lobster|Righteous" rel="stylesheet">
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico?v1.1">
+    <script src="http://assets.absolutdrinks.com/api/addb-0.5.2.min.js" type="text/javascript"></script>
+    <script>
+      addb.init({
+        appId:13313
+      })
+    </script>
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
