fix(addb api) - changed to https://

--- a/mixologylab/public/index.html
+++ b/mixologylab/public/index.html
@@ -12,10 +12,10 @@
     <link href="https://fonts.googleapis.com/css?family=Courgette|Playball|Lobster|Righteous" rel="stylesheet">
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico?v1.1">
-    <script src="http://assets.absolutdrinks.com/api/addb-0.5.2.min.js" type="text/javascript"></script>
+    <script src="https://assets.absolutdrinks.com/api/addb-0.5.2.min.js" type="text/javascript"></script>
     <script>
       addb.init({
-        appId:13313
+        appId:13601
       })
     </script>
     <!--
@@ -33,9 +33,6 @@ addb.init({
 appId:13601
 })
 
-addb.drinks().load('absolut-cosmopolitan', function(shake){console.log(shake)});
-
-console.log(window.addb, window.addb.drinks)
 </script>
     <title>Mixology Lab</title>
     <style>
